--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio_react",
+  "homepage": "https://sayalihingane05.github.io/sayali_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@remixicon/react": "^4.7.0",
@@ -25,6 +28,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "init": "^0.1.2",
     "postcss": "^8.5.6",
