--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@remixicon/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.18",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
